--- a/index.html
+++ b/index.html
@@ -1165,8 +1165,8 @@ pro.innerHTML=progre;
     nd=1;
     np=5;
     nx=np-nd;
-    na=3;
-    while(nx % na != 0){
+    na=4;
+    while((np-nd) % (na-1) != 0){
     p3.style.display="block";
     nd=Math.floor(Math.random()*(10-1)+1);
     np=Math.floor(Math.random()*(120-20)+20); 
